<resources>
    <string name="app_name">WhatieDemo</string>
    <string name="about_app_version">WhatieDemo  </string>
    <string name="about_right_reserved">©2017-2018 Whatie.All rights reserved.</string>
    <string name="about_title">WhatieDemo 1.0</string>
    <string name="adding_progress_step_2">2.Device is registering to the eHome cloud platform</string>
    <string name="setting_choice2">Clear eHome Storage</string>
    <string name="profile_update_tip">eHome has new version.</string>
    <string name="Feedback">Feedback</string>
    <string name="Setting_title">Settings</string>
    <string name="Use_Alexa">Use Amazon Alexa</string>
    <string name="Use_Google">Use Google Home</string>
    <string name="about_choice">Features</string>
    <string name="about_choice2">Update APP</string>
    <string name="about_choice3">Service Agreement</string>
    <string name="about_condition_title">Service Agreement</string>
    <string name="about_featrue_title">Features</string>
    <string name="about_update_question">Sure to update to the lasted version？</string>
    <string name="add_device_button">ADD DEVICE</string>
    <string name="add_timer_title">Add Timer</string>
    <string name="adding_device_device_near">make sure your device is near your phone</string>
    <string name="adding_device_next">NEXT</string>
    <string name="adding_device_please_wait">Please Wait</string>
    <string name="adding_device_wait_desc">your smart device will be available soon</string>
    <string name="adding_progress_step_1">1.Device has been searched</string>
    <string name="adding_progress_step_3">3.Start to add Device...</string>
    <string name="alarm_add">Add</string>
    <string name="alarm_item_turn_on">Turn On</string>
    <string name="alarm_list_title">Timer</string>
    <string name="alarms_without_network">Can not set alarms at local state.</string>
    <string name="belong_to_default_home">Home(Default)</string>
    <string name="belong_to_default_room">DEFAULT ROOM</string>
    <string name="belong_to_home">BELONGS TO</string>
    <string name="change_device_title">Change Device Name</string>
    <string name="change_name_button">CONFIRM</string>
    <string name="change_name_reminder">Enter the name you want to change</string>
    <string name="change_name_tip">New name cannot be empty.</string>
    <string name="change_name_title">Change your user name</string>
    <string name="change_password_hint">Email Address</string>
    <string name="change_password_hint_confirm_new">Confirm New password</string>
    <string name="change_password_hint_new">New password</string>
    <string name="change_password_hint_old">Old password</string>
    <string name="change_password_match">Password does not match.</string>
    <string name="change_password_msg">with your old password</string>
    <string name="change_password_submit">SUBMIT</string>
    <string name="change_password_tip">Password cannot be empty.</string>
    <string name="change_password_title">Change Login Password</string>
    <string name="change_password_verification_email">Email Verification</string>
    <string name="change_password_verification_hint">PIN</string>
    <string name="change_password_verification_reminder">Please enter the PIN fron email to continue.</string>
    <string name="confirm_device_title">Confirm</string>
    <string name="confirm_home_wifi">Confirm Home Wifi</string>
    <string name="confirm_plug">broadlink plug</string>
    <string name="confirm_socket">BULL smart socket</string>
    <string name="countdown_hour">Hours</string>
    <string name="countdown_minutes">Minutes</string>
    <string name="countdown_without_network">Can not set countdown at local state.</string>
    <string name="current_wifi">current wifi:</string>
    <string name="current_wifi_name">unknown ssid</string>
    <string name="delete_device">DELETE</string>
    <string name="delete_device_cancel">cancel</string>
    <string name="delete_device_delete">Delete</string>
    <string name="delete_device_success">Delete device success!</string>
    <string name="delete_device_sure">Are you sure to delete this device?</string>
    <string name="delete_timer">Delete</string>
    <string name="delete_timer_content">Are you sure to delete this timer?</string>
    <string name="device_add_already_bind">The device has been bound</string>
    <string name="device_add_connect">You can ask the account: </string>
    <string name="device_add_connect_2"> to share the device for you or unbind the device.</string>
    <string name="device_add_device_name">Device name: </string>
    <string name="device_add_failed">Failed</string>
    <string name="device_add_failed_tip">FAQ:\n*The device is not in the distribution network mode\n*WIFI password was entered incorrectly\n*The network signal of the device connection is poor\n*You need to make sure you add devices to the wireless network using 2G spectrum</string>
    <string name="device_add_question">Are you ensure cancel this adding</string>
    <string name="device_add_success">Success</string>
    <string name="device_add_success_tip">find devices</string>
    <string name="device_add_title">Add Device</string>
    <string name="device_alarm">Alarm</string>
    <string name="device_control_change">Device status has been changed.</string>
    <string name="device_control_lost">Connection lost.</string>
    <string name="device_control_title">Device Detail</string>
    <string name="device_countdown">Countdown</string>
    <string name="device_delete_content">Sure to delete device?</string>
    <string name="device_delete_failed">Delete Failed.</string>
    <string name="device_delete_title">DELETE</string>
    <string name="device_detail_off">Device is off</string>
    <string name="device_detail_on">Device is on</string>
    <string name="device_is_offline">Device is offline, cannot control it. Click long to change name or delete it.</string>
    <string name="device_is_offline_my_list">Device is offline, cannot control it.</string>
    <string name="device_list_add">Add</string>
    <string name="device_list_name">name</string>
    <string name="device_list_state">on</string>
    <string name="device_list_title">Home</string>
    <string name="device_locate">Located in </string>
    <string name="device_receive">Shared from </string>
    <string name="device_send">Shared to </string>
    <string name="device_name">Device name</string>
    <string name="device_name_change">CONFIRM</string>
    <string name="device_off">OFF</string>
    <string name="device_offline">OFFLINE</string>
    <string name="device_on">ON</string>
    <string name="device_option">Option</string>
    <string name="device_setting_name">Name cannot be empty.</string>
    <string name="device_setting_title">Device Settings</string>
    <string name="device_settings_delete">Delete</string>
    <string name="device_settings_delete_title">DELETE</string>
    <string name="device_settings_share">SHARE</string>
    <string name="device_settings_share_desc">Share Device To Friends</string>
    <string name="device_settings_unbind">Unbind</string>
    <string name="device_settings_unbind_title">UNBIND</string>
    <string name="device_shared_qrcode_desc">Welcome friends to enjoy the device!</string>
    <string name="device_shared_qrcode_title">Scan And Enjoy</string>
    <string name="device_shared_title">Device Share</string>
    <string name="device_sharing_left">Back</string>
    <string name="device_sharing_no_device_received">You don\'t have received sharing device.</string>
    <string name="device_sharing_no_device_sent">You don\'t have sent sharing device.</string>
    <string name="device_sharing_received">Received sharing</string>
    <string name="device_sharing_sent">Sent sharing</string>
    <string name="device_sharing_title">Device Share</string>
    <string name="device_sharing_with_email">Or, Share with Friend\'s Email...</string>
    <string name="device_started_title">Get Started</string>
    <string name="device_switch">Switch</string>
    <string name="device_switch_close">Close</string>
    <string name="device_switch_open">Open</string>
    <string name="device_unbind">Unbind Success!</string>
    <string name="device_unbind_content">Sure to unbind device?</string>
    <string name="device_unbind_title">UNBIND</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_download_cancel">CANCEL</string>
    <string name="dialog_download_tittle">Dialog title</string>
    <string name="dialog_loading">  LOADING...</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_results">RESULTS</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_title">Downloading...</string>
    <string name="edit_timer_title">Edit Timer</string>
    <string name="error_qrcode">Error QRcode.</string>
    <string name="everyday">everyday</string>
    <string name="feedback">FEEDBACK</string>
    <string name="feedback_from">From:</string>
    <string name="feedback_label">I didn\'t see my device.</string>
    <string name="feedback_label2">About this Home App</string>
    <string name="feedback_photo">Up to three</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_text">Please verify your device:\n● is within 20 feet of this mobile device\n● is powered on, and white indicator light…</string>
    <string name="feedback_text2">The Home App can help you to control your devices like lights, switchs, sockets, and so on. It can make your home smartly...</string>
    <string name="feedback_tip">Feedback cannot be empty.</string>
    <string name="feedback_title">guess you are filling feedback for...</string>
    <string name="forget_password_email">The email cannot be empty</string>
    <string name="forget_password_tip">The email or PIN cannot be empty</string>
    <string name="get_started_button">GET STARTED</string>
    <string name="get_started_device_name">Bull Socket</string>
    <string name="get_started_device_name_title">DEVICE NAME</string>
    <string name="help_feedback_title">Help &amp; Feedback</string>
    <string name="hint">please write your feedback here...</string>
    <string name="indicator_desc">1.Confirm the indicator light rapidly blinks.</string>
    <string name="indicator_reminder">2.If the indicator light does not blinks, please hold the reset button for 5s.</string>
    <string name="indicator_reminder2">3.Please configure the network under the 2.4G WiFi network.</string>
    <string name="recover_password_reminder">Enter the account you want to recover.</string>
    <string name="recover_password_title">Recover Login Password</string>
    <string name="set_new_password_button">SIGN IN</string>
    <string name="set_new_password_hint1">New password</string>
    <string name="set_new_password_hint2">Confirm password</string>
    <string name="set_new_password_reminder">Please set your login password.</string>
    <string name="set_new_password_title">Set New Password</string>
    <string name="submit_btn">SUBMIT FEEDBACK</string>
    <string name="log_in_email">Please enter your email.</string>
    <string name="log_in_change_pwd">Change password</string>
    <string name="log_in_forget_pwd">Forget password</string>
    <string name="log_in_password">Please enter your password.</string>
    <string name="sign_label">Sign in</string>
    <string name="sign_tip">with your email address</string>
    <string name="sign_email">Email</string>
    <string name="sign_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Don\'t have an account? </string>
    <string name="sign_register">Sign up</string>
    <string name="sign_ev_email">\ Please enter your email address.</string>
    <string name="sign_up_pin">PIN</string>
    <string name="sign_up_enter_pin">\ Please enter your PIN.</string>
    <string name="sign_up_send">Send</string>
</resources>