<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_20dp"
        android:paddingRight="@dimen/padding_20dp">

        <ImageView
            android:id="@+id/iv_signIn_back"
            android:layout_width="@dimen/sign_close_scale"
            android:layout_height="@dimen/sign_close_scale"
            android:layout_marginTop="@dimen/sign_cancel_top"
            android:src="@drawable/ic_close"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_label_top"
            android:text="@string/sign_label"
            android:textColor="@color/word_black"
            android:textSize="@dimen/text_28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_tip"
            android:textColor="@color/word_black"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_email_top"
            android:text="@string/sign_email"
            android:textColor="@color/word_black" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_email_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_email_mtop"
            android:background="@drawable/shape_sign_input"
            android:hint="@string/log_in_email"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_password_mtop"
            android:text="@string/sign_password"
            android:textColor="@color/word_black" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_email_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_email_mtop"
            android:background="@drawable/shape_sign_input"
            android:hint="@string/log_in_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:id="@+id/tv_change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_forget_mtop"
            android:gravity="right"
            android:text="@string/log_in_change_pwd"
            android:textColor="@drawable/selector_blue_text" android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/sign_forget_mtop"
            android:gravity="right"
            android:text="@string/log_in_forget_pwd"
            android:textColor="@drawable/selector_blue_text" />

        <TextView
            android:id="@+id/tv_login_signIn"
            style="@style/ConfirmButton"
            android:layout_marginTop="@dimen/sign_in_top"
            android:text="@string/sign_in" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sign_up_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/tv_signIn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_register"
            android:textColor="@drawable/selector_blue_text" />

    </LinearLayout>


</RelativeLayout>