<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_20dp"
        android:paddingRight="@dimen/padding_20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_recover_pwd_back"
            android:layout_width="@dimen/sign_close_scale"
            android:layout_height="@dimen/sign_close_scale"
            android:layout_marginTop="@dimen/sign_cancel_top"
            android:src="@drawable/ic_close"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_password_title"
            android:layout_marginTop="@dimen/sign_up_mtop"
            android:layout_gravity="center"
            android:textSize="@dimen/text_28sp"
            android:textColor="@color/word_black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/recover_password_reminder"
            android:textColor="@color/word_black"
            android:textSize="@dimen/text_14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_email_top"
            android:text="@string/sign_email"
            android:textColor="@color/word_black"/>
        <EditText
            android:id="@+id/et_recover_password_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_email_height"
            android:layout_marginTop="@dimen/sign_email_mtop"
            android:layout_gravity="center"
            android:background="@drawable/shape_sign_input"
            android:hint="@string/sign_ev_email"
            android:textSize="@dimen/text_14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_password_mtop"
            android:text="@string/sign_up_pin"
            android:textColor="@color/word_black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_email_height"
            android:layout_marginTop="@dimen/sign_email_mtop"
            android:layout_gravity="center"
            android:background="@drawable/shape_sign_input">

            <com.whatie.ati.androiddemo.widget.TimerTextView
                android:id="@+id/cdtv_send_pin"
                style="@style/ConfirmButton"
                android:layout_width="@dimen/sign_send_width"
                android:layout_height="@dimen/sign_send_height"
                android:layout_marginTop="@dimen/sign_send_top"
                android:layout_marginEnd="@dimen/sign_send_right"
                android:layout_alignParentRight="true"
                android:text="@string/sign_up_send"
                android:gravity="center"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/et_change_pwd_pin"
                android:layout_toLeftOf="@id/cdtv_send_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sign_input"
                android:hint="@string/sign_up_enter_pin"
                android:textSize="@dimen/text_14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_recover_password"
            android:layout_marginTop="@dimen/sign_btn_mtop"
            style="@style/ConfirmButton"
            android:text="@string/change_name_button"/>

    </LinearLayout>





</LinearLayout>