<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_recover_pwd_back"
        android:layout_width="@dimen/sign_close_scale"
        android:layout_height="@dimen/sign_close_scale"
        android:layout_marginStart="@dimen/sign_cancel_left"
        android:layout_marginTop="@dimen/sign_cancel_top"
        android:src="@drawable/ic_close"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/set_new_password_title"
        android:textSize="@dimen/text_28sp"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/padding_20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_new_password_reminder"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14sp"
        android:layout_marginLeft="@dimen/padding_20dp"/>
    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_change_name_edit_height"
        android:layout_marginTop="@dimen/act_change_name_edit_dimen"
        android:layout_marginRight="@dimen/padding_19dp"
        android:layout_marginLeft="@dimen/padding_19dp"
        android:background="@drawable/shape_change_name"
        android:hint="@string/set_new_password_hint1"
        android:textSize="@dimen/text_14sp"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_10dp"/>
    <EditText
        android:id="@+id/et_new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/act_change_name_edit_height"
        android:layout_marginTop="@dimen/padding_20dp"
        android:layout_marginRight="@dimen/padding_19dp"
        android:layout_marginLeft="@dimen/padding_19dp"
        android:background="@drawable/shape_change_name"
        android:hint="@string/set_new_password_hint2"
        android:inputType="textPassword"
        android:textSize="@dimen/text_14sp"
        android:paddingLeft="@dimen/padding_10dp"/>
    <TextView
        android:id="@+id/tv_set_new_password"
        style="@style/ConfirmButton"
        android:layout_marginTop="@dimen/padding_35dp"
        android:layout_marginLeft="@dimen/padding_19dp"
        android:layout_marginRight="@dimen/padding_19dp"
        android:text="@string/set_new_password_button"/>




</LinearLayout>